--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@
   </div>
   <div class="header-wrapper">
     <h1 class="site-welcome">International Institute of Information Technology (I²IT)</h1>
+    <!-- CSS-only Hamburger Menu -->
+    <input type="checkbox" id="menu-toggle" class="menu-toggle" aria-hidden="true">
+    <label for="menu-toggle" class="hamburger" aria-label="Open menu" role="button" tabindex="0">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+    <nav class="side-menu" aria-label="Site Menu">
+      <div class="menu-title">Menu</div>
+      <ul class="menu-list">
+        <li><a class="pill active" href="mentorship.html">Mentorship</a></li>
+        <li><a href="noticeboard.html">Noticeboard</a></li>
+        <li><a href="jo2.html">Jobs</a></li>
+        <li><a class="arrow" href="batchmates.html">Batchmates</a></li>
+        <li><a href="support.html">Donation</a></li>
+        <li><a class="arrow" href="about-i2it.html">More</a></li>
+      </ul>
+      <div class="sep"></div>
+      <ul class="menu-list">
+        <li><a href="settings.html">Settings</a></li>
+        <li><a href="my-profile.html">My Profile</a></li>
+        <li><a href="transactions.html">My Transactions</a></li>
+        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+        <li><a href="terms-conditions.html">Terms &amp; Conditions</a></li>
+        <li><a href="login.html">Logout</a></li>
+      </ul>
+    </nav>
     
     <div class="navbar">
       <a href="index.html">Home</a>
